--- a/index.html
+++ b/index.html
@@ -147,78 +147,9 @@
         <section class="secciones">
             <h2>Productos</h2>
             <div class="productos">
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Lamborghini Veneno Roadster.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>Lamborghini Veneno Roadster</h4>
-                        <span>$ 8.356.500.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Kawasaki Ninja H2R 400kmph top speed.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>Kawasaki Ninja H2R 400kmph top speed</h4>
-                        <span>$ 70.670.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Rolls-Royce La Rose Grand_.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>Rolls-Royce la Rose Noire Droptail</h4>
-                        <span>$ 98.856.900.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Kawasaki Ninja ZX-6R.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>KAWASAKI NINJA ZX-6R</h4>
-                        <span>$ 46.500.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Ram TRX 1500.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>Ram TRX 1500</h4>
-                        <span>$178.630.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/BMW HP4.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>BMW HP4</h4>
-                        <span>$ 46.510.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/Ford Mustang GT.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>Ford Mustang GT</h4>
-                        <span>$ 356.500.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/BMW RR 1000.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>BMW RR 1000</h4>
-                        <span>$ 86.300.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/ford ranger.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>FORD RANGER </h4>
-                        <span>$ 76.200.000 ARS</span>
-                    </div>
-                </div>
-                <div class="producto">
-                    <img src="IMAGENES PROYECTO/DUCATI MOSTER B1.jpg" alt="automovil deportivo">
-                    <div class="producto-contenido">
-                        <h4>DUCATI MONSTER B1</h4>
-                        <span>$ 56.350.000 ARS</span>
-                    </div>
-                </div>
             </div>
         </section>
+        <section class="carritoCompras"></section>
         <!-- Formas de Pago y Contacto-->
         <a id="contacto"></a>
         <section id="formas-de-pago-contacto">
@@ -303,7 +234,7 @@
             <p>Todos los derechos reservados &copy; juan yamil guzman, Zeuscompany.</p>
         </div>
     </footer>
-
+<script src="scripts.js"></script>
 </body>
 
 </html>
